estou fazendo o buscador e filtro
parei no Buscador

--- a/src/pages/Marvel/Marvel.module.scss
+++ b/src/pages/Marvel/Marvel.module.scss
@@ -1,3 +1,6 @@
+@import 'styles/variaveis';
+
+
 .bg {
     background-image: url('../../assets/marvel/logoo.jpg');
     height: 45vh;
@@ -9,3 +12,4 @@
 .menu{
     padding: 10px 320px;
 }
+
